# DBDiffTool

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  profile.ini
SQL/: 用到的SQL备份.PG.sql  用到的SQL备份.SQLite.sql
cmake/: ansi.cmake  components.cmake  custom-targets.cmake  export-vs-project.cmake
include/DBDiffTool/: DBDiffTool.hh  DataSource.hh  Version.hh
include/DBDiffTool/common/: AnsiColor.hh  Global.hh  Macros.hh  Traits.hh  Util.hh  common.hh
include/DBDiffTool/compare/: Comparator.hh
include/DBDiffTool/factory/: DBFactory.hh
include/DBDiffTool/impl/: MySQL.hh  Oracle.hh  PostgreSQL.hh  PostgreSql.hh  SQLCipher3.hh  SQLServer.hh  SQLServerODBC.hh  SQLite.hh  impl.hh
include/DBDiffTool/object/: Column.hh  Index.hh  Node.hh  Object.hh  Procedure.hh  Schema.hh  Sequence.hh  Table.hh  Trigger.hh  object.hh
include/DBDiffTool/orm/: MySQL.hh  Oracle.hh  PostgreSQL.hh  PostgreSql.hh  SQLCipher3.hh  SQLServer.hh  SQLServerODBC.hh  SQLite.hh  SqLite.hh  Type.hh  orm.hh
include/github/mcmtroffaes/: inipp.hh
source/: Comparator.cc  DBFactory.cc  DBTest.cpp  Global.cc  Object.cc  Util.cc
static/: DBDiffTool.aps  DBDiffTool.rc
