CMAKE_MINIMUM_REQUIRED(VERSION 3.29)
PROJECT(DBDiffTool)

SET(TARGET_NAME DBDiffTool)
SET(CMAKE_CXX_STANDARD 20)
SET(TARGET_DIR ${PROJECT_SOURCE_DIR}/target)

INCLUDE(cmake/ansi.cmake)
INCLUDE(cmake/components.cmake)
MESSAGE(STATUS "Build Type: ${GRNB}${R} ${CMAKE_BUILD_TYPE} ${RST}")
MESSAGE(STATUS "${CYNB}${DDT_ANSI}${RST}")
ADD_COMPILE_DEFINITIONS(${DDT_ANSI})

# >>> 编译链接
INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(source SOURCE_FILES)
FILE(GLOB_RECURSE HEADER_FILES ${PROJECT_SOURCE_DIR}/include/*.hh)
ADD_EXECUTABLE(${TARGET_NAME} main.cpp static/DBDiffTool.rc ${HEADER_FILES} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${TARGET_NAME} PUBLIC DBLayer BeeBase)
# <<< 编译链接

ADD_CUSTOM_COMMAND(
    TARGET ${TARGET_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
    "$<TARGET_FILE:${TARGET_NAME}>"
    "${TARGET_DIR}"
    COMMENT "复制成果物 ${TARGET_NAME} 到 ${TARGET_DIR}"
)

INCLUDE(cmake/custom-targets.cmake)
INCLUDE(cmake/export-vs-project.cmake)